    (Zheng Shao via namit)

    HIVE-713. Integrate operator counters into query plan to view progress of
    queries. (Namit Jain and Raghu Murthy via zshao)

    HIVE-187. Preliminary ODBC Support. (Eric Hwang via rmurthy)

    HIVE-708. Add TypedBytes SerDe for transform. (Namit Jain via zshao)

    HIVE-777. CREATE TABLE with STRUCT type. (He Yongqiang via zshao)

  IMPROVEMENTS

    HIVE-760. Add version info to META-INF/MANIFEST.MF.
    (Bill Graham via zshao)

    HIVE-759. Add "hive.intermediate.compression.codec/type" option.
    (Yongqiang He via zshao)

    HIVE-732. Use LazyBinarySerDe (Zheng Shao via namit)

    HIVE-768. Add conf var to disable counters introduced by HIVE-713.
    (Namit Jain via zshao)

    HIVE-679. Adding the basic JDBC methods to allow querying using the
    SQuirrelSQL tool. (Bill Graham via rmurthy)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-734. problem while inserting nulls. (Ning Zhang via namit)

    HIVE-769. Bug in partition pruner checking. (Zheng Shao via namit)
    
    HIVE-773. Remove lzocodec import from FileSinkOperator.
    (He Yongqiang via johan)

    HIVE-769. Bug in partition pruner checking - bug in patch. 
    (Zheng Shao via namit)

    HIVE-782. Bug in reducer progress (Raghu Murthy via namit)
  
    HIVE-780. Better error messages for wrong argument lengths in UDAFs
    (Zheng Shao via namit)

Release 0.4.0 -  Unreleased

  INCOMPATIBLE CHANGES

    HIVE-143. Remove the old file based metastore, in favour of the
    RDBMS based metastore. (prasadc via johan)

    HIVE-724. Change HiveServer.getSchema() to return Hive types rather
    than Thrift types. Changed existing getSchema() to getThriftSchema()
    (Eric Hwang via rmurthy)

  NEW FEATURES

    HIVE-354. UDF for length of a string. (Neil Conway via namit).

    HIVE-402. Implement UDF regexp. (Raghotham Murthy via namit)

    HIVE-250. Shared memory java dbm for map-side joins.
    (Joydeep Sen Sarma via zshao)
