@@ -827,6 +827,44 @@ name|addedJars
 argument_list|)
 expr_stmt|;
 block|}
+name|String
+name|addedArchives
+init|=
+name|getResourceFiles
+argument_list|(
+name|job
+argument_list|,
+name|SessionState
+operator|.
+name|ResourceType
+operator|.
+name|ARCHIVE
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|StringUtils
+operator|.
+name|isNotBlank
+argument_list|(
+name|addedArchives
+argument_list|)
+condition|)
+block|{
+name|HiveConf
+operator|.
+name|setVar
+argument_list|(
+name|job
+argument_list|,
+name|ConfVars
+operator|.
+name|HIVEADDEDARCHIVES
+argument_list|,
+name|addedArchives
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/**    * Constructor/Initialization for invocation as independent utility    */
 specifier|public
@@ -2591,6 +2629,41 @@ argument_list|(
 literal|"tmpfiles"
 argument_list|,
 name|addedFiles
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Transfer HIVEADDEDARCHIVES to "tmparchives" so hadoop understands it
+name|String
+name|addedArchives
+init|=
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|job
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEADDEDARCHIVES
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|StringUtils
+operator|.
+name|isNotBlank
+argument_list|(
+name|addedArchives
+argument_list|)
+condition|)
+block|{
+name|initializeFiles
+argument_list|(
+literal|"tmparchives"
+argument_list|,
+name|addedArchives
 argument_list|)
 expr_stmt|;
 block|}
