@@ -1697,6 +1697,56 @@ return|;
 block|}
 block|}
 argument_list|)
+block|,
+name|ARCHIVE
+argument_list|(
+operator|new
+name|ResourceHook
+argument_list|()
+block|{
+specifier|public
+name|String
+name|preHook
+parameter_list|(
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|cur
+parameter_list|,
+name|String
+name|s
+parameter_list|)
+block|{
+return|return
+name|validateFile
+argument_list|(
+name|cur
+argument_list|,
+name|s
+argument_list|)
+return|;
+block|}
+specifier|public
+name|boolean
+name|postHook
+parameter_list|(
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|cur
+parameter_list|,
+name|String
+name|s
+parameter_list|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+argument_list|)
 block|;
 specifier|public
 name|ResourceHook
